# poc-rust-static-file-server

./: Cargo.toml  Dockerfile  docker-compose.yml
sfs/: Cargo.toml
sfs/src/: main.rs
src/: main.rs
